mess-app/err.txt
file:///e:/Desktop/Mess%20management/mess-app/main.js:1370
function renderAll() {
^

SyntaxError: Identifier 'renderAll' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:354:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:91:18)
    at #translate (node:internal/modules/esm/loader:451:20)
    at afterLoad (node:internal/modules/esm/loader:507:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:512:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:555:36)
    at afterResolve (node:internal/modules/esm/loader:603:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:609:12)
    at node:internal/modules/esm/loader:628:32
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v25.7.0
